log/parse.output
Terminals which are not used

   EOL


State 2 conflicts: 1 shift/reduce
State 3 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce


Grammar

    0 $accept: stmts $end

    1 stmts: /* empty */
    2      | stmt ';' stmts

    3 stmt: def
    4     | exec
    5     | exp
    6     | '(' stmts ')'

    7 def: def_var
    8    | def_arr
    9    | def_fun

   10 def_var: VAR ':' exp
   11        | VAR ':' PATH
   12        | VAR ':' STRING

   13 @1: /* empty */

   14 def_arr: VAR ':' '{' @1 items '}'

   15 items: items ',' INTEGER
   16      | INTEGER
   17      | /* empty */

   18 @2: /* empty */

   19 def_fun: VAR params ':' @2 '(' stmts ')'

   20 params: '(' ')'
   21       | '(' params_def ')'
   22       | '(' params_exec ')'

   23 params_def: param_def
   24           | param_def ',' params_def

   25 param_def: VAR ':' INTEGER

   26 params_exec: param_exec
   27            | param_exec ',' params_exec

   28 param_exec: exp

   29 exec: '.' '<' '=' exp
   30     | VAR '<' '=' exp
   31     | PREFIXES_VAR '<' '=' exp
   32     | VAR '\\' '(' exp ')' '<' '=' exp
   33     | PREFIXES_VAR '\\' '(' exp ')' '<' '=' exp
   34     | '&' VAR '\\' '(' exp ')' '<' '=' exp
   35     | '&' PREFIXES_VAR '\\' '(' exp ')' '<' '=' exp
   36     | if_head ',' stmt ')'
   37     | if_head ')'

   38 @3: /* empty */

   39 @4: /* empty */

   40 exec: WHILE @3 '(' exp ',' @4 stmt ')'

   41 @5: /* empty */

   42 @6: /* empty */

   43 if_head: IF @5 '(' exp @6 ',' stmt

   44 exp: factor
   45    | exp '+' factor
   46    | exp '.' '+' factor
   47    | exp '-' factor
   48    | exp '<' factor
   49    | exp '>' factor
   50    | exp LEQ factor
   51    | exp MEQ factor
   52    | exp '=' factor
   53    | exp '#' factor

   54 factor: term
   55       | factor '*' term
   56       | factor '/' term

   57 term: INTEGER
   58     | VAR
   59     | PREFIXES_VAR
   60     | '@' VAR
   61     | '@' PREFIXES_VAR
   62     | VAR '\\' '(' exp ')'
   63     | PREFIXES_VAR '\\' '(' exp ')'
   64     | '&' VAR '\\' '(' exp ')'
   65     | '&' PREFIXES_VAR '\\' '(' exp ')'
   66     | VAR params
   67     | PREFIXES_VAR params


Terminals, with rules where they appear

$end (0) 0
'#' (35) 53
'&' (38) 34 35 64 65
'(' (40) 6 19 20 21 22 32 33 34 35 40 43 62 63 64 65
')' (41) 6 19 20 21 22 32 33 34 35 36 37 40 62 63 64 65
'*' (42) 55
'+' (43) 45 46
',' (44) 15 24 27 36 40 43
'-' (45) 47
'.' (46) 29 46
'/' (47) 56
':' (58) 10 11 12 14 19 25
';' (59) 2
'<' (60) 29 30 31 32 33 34 35 48
'=' (61) 29 30 31 32 33 34 35 52
'>' (62) 49
'@' (64) 60 61
'\\' (92) 32 33 34 35 62 63 64 65
'{' (123) 14
'}' (125) 14
error (256)
MEQ (258) 51
LEQ (259) 50
INTEGER (260) 15 16 25 57
STRING (261) 12
VAR (262) 10 11 12 14 19 25 30 32 34 58 60 62 64 66
PATH (263) 11
PREFIXES_VAR (264) 31 33 35 59 61 63 65 67
IF (265) 43
WHILE (266) 40
EOL (267)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
stmts (33)
    on left: 1 2, on right: 0 2 6 19
stmt (34)
    on left: 3 4 5 6, on right: 2 36 40 43
def (35)
    on left: 7 8 9, on right: 3
def_var (36)
    on left: 10 11 12, on right: 7
def_arr (37)
    on left: 14, on right: 8
@1 (38)
    on left: 13, on right: 14
items (39)
    on left: 15 16 17, on right: 14 15
def_fun (40)
    on left: 19, on right: 9
@2 (41)
    on left: 18, on right: 19
params (42)
    on left: 20 21 22, on right: 19 66 67
params_def (43)
    on left: 23 24, on right: 21 24
param_def (44)
    on left: 25, on right: 23 24
params_exec (45)
    on left: 26 27, on right: 22 27
param_exec (46)
    on left: 28, on right: 26 27
exec (47)
    on left: 29 30 31 32 33 34 35 36 37 40, on right: 4
@3 (48)
    on left: 38, on right: 40
@4 (49)
    on left: 39, on right: 40
if_head (50)
    on left: 43, on right: 36 37
@5 (51)
    on left: 41, on right: 43
@6 (52)
    on left: 42, on right: 43
exp (53)
    on left: 44 45 46 47 48 49 50 51 52 53, on right: 5 10 28 29 30
    31 32 33 34 35 40 43 45 46 47 48 49 50 51 52 53 62 63 64 65
factor (54)
    on left: 54 55 56, on right: 44 45 46 47 48 49 50 51 52 53 55 56
term (55)
    on left: 57 58 59 60 61 62 63 64 65 66 67, on right: 54 55 56


state 0

    0 $accept: . stmts $end

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 2
    PREFIXES_VAR  shift, and go to state 3
    IF            shift, and go to state 4
    WHILE         shift, and go to state 5
    '('           shift, and go to state 6
    '.'           shift, and go to state 7
    '&'           shift, and go to state 8
    '@'           shift, and go to state 9

    $default  reduce using rule 1 (stmts)

    stmts    go to state 10
    stmt     go to state 11
    def      go to state 12
    def_var  go to state 13
    def_arr  go to state 14
    def_fun  go to state 15
    exec     go to state 16
    if_head  go to state 17
    exp      go to state 18
    factor   go to state 19
    term     go to state 20


state 1

   57 term: INTEGER .

    $default  reduce using rule 57 (term)


state 2

   10 def_var: VAR . ':' exp
   11        | VAR . ':' PATH
   12        | VAR . ':' STRING
   14 def_arr: VAR . ':' '{' @1 items '}'
   19 def_fun: VAR . params ':' @2 '(' stmts ')'
   30 exec: VAR . '<' '=' exp
   32     | VAR . '\\' '(' exp ')' '<' '=' exp
   58 term: VAR .
   62     | VAR . '\\' '(' exp ')'
   66     | VAR . params

    '<'   shift, and go to state 21
    '('   shift, and go to state 22
    ':'   shift, and go to state 23
    '\\'  shift, and go to state 24

    '<'       [reduce using rule 58 (term)]
    $default  reduce using rule 58 (term)

    params  go to state 25


state 3

   31 exec: PREFIXES_VAR . '<' '=' exp
   33     | PREFIXES_VAR . '\\' '(' exp ')' '<' '=' exp
   59 term: PREFIXES_VAR .
   63     | PREFIXES_VAR . '\\' '(' exp ')'
   67     | PREFIXES_VAR . params

    '<'   shift, and go to state 26
    '('   shift, and go to state 22
    '\\'  shift, and go to state 27

    '<'       [reduce using rule 59 (term)]
    $default  reduce using rule 59 (term)

    params  go to state 28


state 4

   43 if_head: IF . @5 '(' exp @6 ',' stmt

    $default  reduce using rule 41 (@5)

    @5  go to state 29


state 5

   40 exec: WHILE . @3 '(' exp ',' @4 stmt ')'

    $default  reduce using rule 38 (@3)

    @3  go to state 30


state 6

    6 stmt: '(' . stmts ')'

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 2
    PREFIXES_VAR  shift, and go to state 3
    IF            shift, and go to state 4
    WHILE         shift, and go to state 5
    '('           shift, and go to state 6
    '.'           shift, and go to state 7
    '&'           shift, and go to state 8
    '@'           shift, and go to state 9

    $default  reduce using rule 1 (stmts)

    stmts    go to state 31
    stmt     go to state 11
    def      go to state 12
    def_var  go to state 13
    def_arr  go to state 14
    def_fun  go to state 15
    exec     go to state 16
    if_head  go to state 17
    exp      go to state 18
    factor   go to state 19
    term     go to state 20


state 7

   29 exec: '.' . '<' '=' exp

    '<'  shift, and go to state 32


state 8

   34 exec: '&' . VAR '\\' '(' exp ')' '<' '=' exp
   35     | '&' . PREFIXES_VAR '\\' '(' exp ')' '<' '=' exp
   64 term: '&' . VAR '\\' '(' exp ')'
   65     | '&' . PREFIXES_VAR '\\' '(' exp ')'

    VAR           shift, and go to state 33
    PREFIXES_VAR  shift, and go to state 34


state 9

   60 term: '@' . VAR
   61     | '@' . PREFIXES_VAR

    VAR           shift, and go to state 35
    PREFIXES_VAR  shift, and go to state 36


state 10

    0 $accept: stmts . $end

    $end  shift, and go to state 37


state 11

    2 stmts: stmt . ';' stmts

    ';'  shift, and go to state 38


state 12

    3 stmt: def .

    $default  reduce using rule 3 (stmt)


state 13

    7 def: def_var .

    $default  reduce using rule 7 (def)


state 14

    8 def: def_arr .

    $default  reduce using rule 8 (def)


state 15

    9 def: def_fun .

    $default  reduce using rule 9 (def)


state 16

    4 stmt: exec .

    $default  reduce using rule 4 (stmt)


state 17

   36 exec: if_head . ',' stmt ')'
   37     | if_head . ')'

    ')'  shift, and go to state 39
    ','  shift, and go to state 40


state 18

    5 stmt: exp .
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 5 (stmt)


state 19

   44 exp: factor .
   55 factor: factor . '*' term
   56       | factor . '/' term

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 44 (exp)


state 20

   54 factor: term .

    $default  reduce using rule 54 (factor)


state 21

   30 exec: VAR '<' . '=' exp

    '='  shift, and go to state 52


state 22

   20 params: '(' . ')'
   21       | '(' . params_def ')'
   22       | '(' . params_exec ')'

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 53
    PREFIXES_VAR  shift, and go to state 54
    ')'           shift, and go to state 55
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    params_def   go to state 57
    param_def    go to state 58
    params_exec  go to state 59
    param_exec   go to state 60
    exp          go to state 61
    factor       go to state 19
    term         go to state 20


state 23

   10 def_var: VAR ':' . exp
   11        | VAR ':' . PATH
   12        | VAR ':' . STRING
   14 def_arr: VAR ':' . '{' @1 items '}'

    INTEGER       shift, and go to state 1
    STRING        shift, and go to state 62
    VAR           shift, and go to state 63
    PATH          shift, and go to state 64
    PREFIXES_VAR  shift, and go to state 54
    '{'           shift, and go to state 65
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    exp     go to state 66
    factor  go to state 19
    term    go to state 20


state 24

   32 exec: VAR '\\' . '(' exp ')' '<' '=' exp
   62 term: VAR '\\' . '(' exp ')'

    '('  shift, and go to state 67


state 25

   19 def_fun: VAR params . ':' @2 '(' stmts ')'
   66 term: VAR params .

    ':'  shift, and go to state 68

    $default  reduce using rule 66 (term)


state 26

   31 exec: PREFIXES_VAR '<' . '=' exp

    '='  shift, and go to state 69


state 27

   33 exec: PREFIXES_VAR '\\' . '(' exp ')' '<' '=' exp
   63 term: PREFIXES_VAR '\\' . '(' exp ')'

    '('  shift, and go to state 70


state 28

   67 term: PREFIXES_VAR params .

    $default  reduce using rule 67 (term)


state 29

   43 if_head: IF @5 . '(' exp @6 ',' stmt

    '('  shift, and go to state 71


state 30

   40 exec: WHILE @3 . '(' exp ',' @4 stmt ')'

    '('  shift, and go to state 72


state 31

    6 stmt: '(' stmts . ')'

    ')'  shift, and go to state 73


state 32

   29 exec: '.' '<' . '=' exp

    '='  shift, and go to state 74


state 33

   34 exec: '&' VAR . '\\' '(' exp ')' '<' '=' exp
   64 term: '&' VAR . '\\' '(' exp ')'

    '\\'  shift, and go to state 75


state 34

   35 exec: '&' PREFIXES_VAR . '\\' '(' exp ')' '<' '=' exp
   65 term: '&' PREFIXES_VAR . '\\' '(' exp ')'

    '\\'  shift, and go to state 76


state 35

   60 term: '@' VAR .

    $default  reduce using rule 60 (term)


state 36

   61 term: '@' PREFIXES_VAR .

    $default  reduce using rule 61 (term)


state 37

    0 $accept: stmts $end .

    $default  accept


state 38

    2 stmts: stmt ';' . stmts

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 2
    PREFIXES_VAR  shift, and go to state 3
    IF            shift, and go to state 4
    WHILE         shift, and go to state 5
    '('           shift, and go to state 6
    '.'           shift, and go to state 7
    '&'           shift, and go to state 8
    '@'           shift, and go to state 9

    $default  reduce using rule 1 (stmts)

    stmts    go to state 77
    stmt     go to state 11
    def      go to state 12
    def_var  go to state 13
    def_arr  go to state 14
    def_fun  go to state 15
    exec     go to state 16
    if_head  go to state 17
    exp      go to state 18
    factor   go to state 19
    term     go to state 20


state 39

   37 exec: if_head ')' .

    $default  reduce using rule 37 (exec)


state 40

   36 exec: if_head ',' . stmt ')'

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 2
    PREFIXES_VAR  shift, and go to state 3
    IF            shift, and go to state 4
    WHILE         shift, and go to state 5
    '('           shift, and go to state 6
    '.'           shift, and go to state 7
    '&'           shift, and go to state 8
    '@'           shift, and go to state 9

    stmt     go to state 78
    def      go to state 12
    def_var  go to state 13
    def_arr  go to state 14
    def_fun  go to state 15
    exec     go to state 16
    if_head  go to state 17
    exp      go to state 18
    factor   go to state 19
    term     go to state 20


state 41

   48 exp: exp '<' . factor

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    factor  go to state 79
    term    go to state 20


state 42

   49 exp: exp '>' . factor

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    factor  go to state 80
    term    go to state 20


state 43

   52 exp: exp '=' . factor

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    factor  go to state 81
    term    go to state 20


state 44

   53 exp: exp '#' . factor

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    factor  go to state 82
    term    go to state 20


state 45

   51 exp: exp MEQ . factor

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    factor  go to state 83
    term    go to state 20


state 46

   50 exp: exp LEQ . factor

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    factor  go to state 84
    term    go to state 20


state 47

   45 exp: exp '+' . factor

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    factor  go to state 85
    term    go to state 20


state 48

   47 exp: exp '-' . factor

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    factor  go to state 86
    term    go to state 20


state 49

   46 exp: exp '.' . '+' factor

    '+'  shift, and go to state 87


state 50

   55 factor: factor '*' . term

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    term  go to state 88


state 51

   56 factor: factor '/' . term

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    term  go to state 89


state 52

   30 exec: VAR '<' '=' . exp

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    exp     go to state 90
    factor  go to state 19
    term    go to state 20


state 53

   25 param_def: VAR . ':' INTEGER
   58 term: VAR .
   62     | VAR . '\\' '(' exp ')'
   66     | VAR . params

    '('   shift, and go to state 22
    ':'   shift, and go to state 91
    '\\'  shift, and go to state 92

    $default  reduce using rule 58 (term)

    params  go to state 93


state 54

   59 term: PREFIXES_VAR .
   63     | PREFIXES_VAR . '\\' '(' exp ')'
   67     | PREFIXES_VAR . params

    '('   shift, and go to state 22
    '\\'  shift, and go to state 94

    $default  reduce using rule 59 (term)

    params  go to state 28


state 55

   20 params: '(' ')' .

    $default  reduce using rule 20 (params)


state 56

   64 term: '&' . VAR '\\' '(' exp ')'
   65     | '&' . PREFIXES_VAR '\\' '(' exp ')'

    VAR           shift, and go to state 95
    PREFIXES_VAR  shift, and go to state 96


state 57

   21 params: '(' params_def . ')'

    ')'  shift, and go to state 97


state 58

   23 params_def: param_def .
   24           | param_def . ',' params_def

    ','  shift, and go to state 98

    $default  reduce using rule 23 (params_def)


state 59

   22 params: '(' params_exec . ')'

    ')'  shift, and go to state 99


state 60

   26 params_exec: param_exec .
   27            | param_exec . ',' params_exec

    ','  shift, and go to state 100

    $default  reduce using rule 26 (params_exec)


state 61

   28 param_exec: exp .
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 28 (param_exec)


state 62

   12 def_var: VAR ':' STRING .

    $default  reduce using rule 12 (def_var)


state 63

   58 term: VAR .
   62     | VAR . '\\' '(' exp ')'
   66     | VAR . params

    '('   shift, and go to state 22
    '\\'  shift, and go to state 92

    $default  reduce using rule 58 (term)

    params  go to state 93


state 64

   11 def_var: VAR ':' PATH .

    $default  reduce using rule 11 (def_var)


state 65

   14 def_arr: VAR ':' '{' . @1 items '}'

    $default  reduce using rule 13 (@1)

    @1  go to state 101


state 66

   10 def_var: VAR ':' exp .
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 10 (def_var)


state 67

   32 exec: VAR '\\' '(' . exp ')' '<' '=' exp
   62 term: VAR '\\' '(' . exp ')'

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    exp     go to state 102
    factor  go to state 19
    term    go to state 20


state 68

   19 def_fun: VAR params ':' . @2 '(' stmts ')'

    $default  reduce using rule 18 (@2)

    @2  go to state 103


state 69

   31 exec: PREFIXES_VAR '<' '=' . exp

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    exp     go to state 104
    factor  go to state 19
    term    go to state 20


state 70

   33 exec: PREFIXES_VAR '\\' '(' . exp ')' '<' '=' exp
   63 term: PREFIXES_VAR '\\' '(' . exp ')'

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    exp     go to state 105
    factor  go to state 19
    term    go to state 20


state 71

   43 if_head: IF @5 '(' . exp @6 ',' stmt

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    exp     go to state 106
    factor  go to state 19
    term    go to state 20


state 72

   40 exec: WHILE @3 '(' . exp ',' @4 stmt ')'

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    exp     go to state 107
    factor  go to state 19
    term    go to state 20


state 73

    6 stmt: '(' stmts ')' .

    $default  reduce using rule 6 (stmt)


state 74

   29 exec: '.' '<' '=' . exp

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    exp     go to state 108
    factor  go to state 19
    term    go to state 20


state 75

   34 exec: '&' VAR '\\' . '(' exp ')' '<' '=' exp
   64 term: '&' VAR '\\' . '(' exp ')'

    '('  shift, and go to state 109


state 76

   35 exec: '&' PREFIXES_VAR '\\' . '(' exp ')' '<' '=' exp
   65 term: '&' PREFIXES_VAR '\\' . '(' exp ')'

    '('  shift, and go to state 110


state 77

    2 stmts: stmt ';' stmts .

    $default  reduce using rule 2 (stmts)


state 78

   36 exec: if_head ',' stmt . ')'

    ')'  shift, and go to state 111


state 79

   48 exp: exp '<' factor .
   55 factor: factor . '*' term
   56       | factor . '/' term

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 48 (exp)


state 80

   49 exp: exp '>' factor .
   55 factor: factor . '*' term
   56       | factor . '/' term

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 49 (exp)


state 81

   52 exp: exp '=' factor .
   55 factor: factor . '*' term
   56       | factor . '/' term

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 52 (exp)


state 82

   53 exp: exp '#' factor .
   55 factor: factor . '*' term
   56       | factor . '/' term

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 53 (exp)


state 83

   51 exp: exp MEQ factor .
   55 factor: factor . '*' term
   56       | factor . '/' term

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 51 (exp)


state 84

   50 exp: exp LEQ factor .
   55 factor: factor . '*' term
   56       | factor . '/' term

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 50 (exp)


state 85

   45 exp: exp '+' factor .
   55 factor: factor . '*' term
   56       | factor . '/' term

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 45 (exp)


state 86

   47 exp: exp '-' factor .
   55 factor: factor . '*' term
   56       | factor . '/' term

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 47 (exp)


state 87

   46 exp: exp '.' '+' . factor

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    factor  go to state 112
    term    go to state 20


state 88

   55 factor: factor '*' term .

    $default  reduce using rule 55 (factor)


state 89

   56 factor: factor '/' term .

    $default  reduce using rule 56 (factor)


state 90

   30 exec: VAR '<' '=' exp .
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 30 (exec)


state 91

   25 param_def: VAR ':' . INTEGER

    INTEGER  shift, and go to state 113


state 92

   62 term: VAR '\\' . '(' exp ')'

    '('  shift, and go to state 114


state 93

   66 term: VAR params .

    $default  reduce using rule 66 (term)


state 94

   63 term: PREFIXES_VAR '\\' . '(' exp ')'

    '('  shift, and go to state 115


state 95

   64 term: '&' VAR . '\\' '(' exp ')'

    '\\'  shift, and go to state 116


state 96

   65 term: '&' PREFIXES_VAR . '\\' '(' exp ')'

    '\\'  shift, and go to state 117


state 97

   21 params: '(' params_def ')' .

    $default  reduce using rule 21 (params)


state 98

   24 params_def: param_def ',' . params_def

    VAR  shift, and go to state 118

    params_def  go to state 119
    param_def   go to state 58


state 99

   22 params: '(' params_exec ')' .

    $default  reduce using rule 22 (params)


state 100

   27 params_exec: param_exec ',' . params_exec

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    params_exec  go to state 120
    param_exec   go to state 60
    exp          go to state 61
    factor       go to state 19
    term         go to state 20


state 101

   14 def_arr: VAR ':' '{' @1 . items '}'

    INTEGER  shift, and go to state 121

    $default  reduce using rule 17 (items)

    items  go to state 122


state 102

   32 exec: VAR '\\' '(' exp . ')' '<' '=' exp
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor
   62 term: VAR '\\' '(' exp . ')'

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    ')'  shift, and go to state 123
    '.'  shift, and go to state 49


state 103

   19 def_fun: VAR params ':' @2 . '(' stmts ')'

    '('  shift, and go to state 124


state 104

   31 exec: PREFIXES_VAR '<' '=' exp .
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 31 (exec)


state 105

   33 exec: PREFIXES_VAR '\\' '(' exp . ')' '<' '=' exp
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor
   63 term: PREFIXES_VAR '\\' '(' exp . ')'

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    ')'  shift, and go to state 125
    '.'  shift, and go to state 49


state 106

   43 if_head: IF @5 '(' exp . @6 ',' stmt
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 42 (@6)

    @6  go to state 126


state 107

   40 exec: WHILE @3 '(' exp . ',' @4 stmt ')'
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    ','  shift, and go to state 127
    '.'  shift, and go to state 49


state 108

   29 exec: '.' '<' '=' exp .
   45 exp: exp . '+' factor
   46    | exp . '.' '+' factor
   47    | exp . '-' factor
   48    | exp . '<' factor
   49    | exp . '>' factor
   50    | exp . LEQ factor
   51    | exp . MEQ factor
   52    | exp . '=' factor
   53    | exp . '#' factor

    '<'  shift, and go to state 41
    '>'  shift, and go to state 42
    '='  shift, and go to state 43
    '#'  shift, and go to state 44
    MEQ  shift, and go to state 45
    LEQ  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 29 (exec)


state 109

   34 exec: '&' VAR '\\' '(' . exp ')' '<' '=' exp
   64 term: '&' VAR '\\' '(' . exp ')'

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9

    exp     go to state 128
    factor  go to state 19
    term    go to state 20


state 110

   35 exec: '&' PREFIXES_VAR '\\' '(' . exp ')' '<' '=' exp
   65 term: '&' PREFIXES_VAR '\\' '(' . exp ')'

    INTEGER       shift, and go to state 1
    VAR           shift, and go to state 63
    PREFIXES_VAR  shift, and go to state 54
    '&'           shift, and go to state 56
    '@'           shift, and go to state 9
